# mpu6050-linux

./: CMakeLists.txt  README.md
include/: mpu6050.h  mpu6050_calibration.h  mpu6050_reg.h
src/: main.c  mpu6050.c  mpu6050_calibration.c
test/: test.c  test_calibration.c  test_sensor_read.c
